--- a/00/hexview.html
+++ b/00/hexview.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<!-- colors and general layout based on http://geocities.yahoo.com -->
 <html>
 <head>
+    <script src="src/hex.js" defer></script>        
+
 	<title>File Parser</title>
 
 	<style type="text/css">
@@ -158,7 +158,7 @@
                                                 <tr>
                                                     <td>&raquo;</td>
                                                     <td>
-                                                        <a href="hexview.html"><b>Hex Viewer</b></a>
+                                                        <a href="test.html"><b>Hex Viewer</b></a>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -197,12 +197,13 @@
                                 <table cellpadding=3 cellspacing=0 border=0 width="100%">
                                 <tr class=tableHead2>
                                     <td>
-                                        <b>File Load</b>
+                                        <b>File Open</b>
                                     </td>
                                 </tr>
                                 <tr class=tableBody2>
                                     <td>
-                                        <b>asdfasdfsadfasdf</b>
+                                        <input id="loadFile" type="file" onchange="loadFile(event)" style="display:none;" />
+                                        <button id="loadButton" class="btn btn-outline-primary" onclick="openFile()">Load</button>
                                     </td>
                                 </tr>
                                 </table>
@@ -222,7 +223,7 @@
                                         <table border=0 width="100%" cellpadding=2 cellspacing=0>
                                             <tr class="tableHead2">
                                                 <td>
-                                                    <b>Hex Viewer History</b>
+                                                    <b>Hex Viewer</b>
                                                 </td>
                                             </tr>
                                         </table>
@@ -234,52 +235,14 @@
                             <table border=0 cellpadding=3 cellspacing=0 width="100%">
                             <tr>
                                 <td class=tableHead1>
-                                    <b>2021.09.24.01</b>
+                                    <b>File Name</b>
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    Simply indicate the Hex value:
-                                    <ul>
-                                    <li>Choose a file</li>
-                                    <li>Sort and output to the table.</li>
-                                    </ul>
-                                    <br>
+                                    <pre id="result"></pre>
                                 </td>
                             </tr>
-                        </table>
-
-                        <table border=0 width="100%" cellpadding=1 cellspacing=0>
-                            <tr>
-                                <td class="tableOutline2">
-                                    <table border=0 width="100%" cellpadding=2 cellspacing=0>
-                                        <tr class="tableHead2">
-                                            <td>
-                                                <b>PE Viewer History</b>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </td>
-                            </tr>
-                        </table>
-                        <p>
-
-                        <table border=0 cellpadding=3 cellspacing=0 width="100%">
-                        <tr>
-                            <td class=tableHead1>
-                                <b>2021.09.24.01</b>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                NON:
-                                <ul>
-                                <li>X</li>
-                                <li>X</li>
-                                </ul>
-                                <br>
-                            </td>
-                        </tr>
                     </table>
                 </td>    
             </tr>
